--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
@@ -24,7 +24,11 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="fechaActuacionDerivada">Fecha de la actuación
+                                <label class="label-left" for="fechaActuacionDerivada" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('fechaActuacionDerivada').invalid && addressForm.get('fechaActuacionDerivada').touched) ||
+                                      (addressForm.get('fechaActuacionDerivada').invalid && estaEditando)
+                                  }">Fecha de la actuación
                                     derivada</label>
                             </div>
                             <div class="col d-flex align-items-center">
@@ -39,6 +43,15 @@
                                     <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
                                 </button>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('fechaActuacionDerivada').invalid && addressForm.get('fechaActuacionDerivada').touched) ||
+                                    (addressForm.get('fechaActuacionDerivada').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -46,8 +59,11 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="descripcionActuacionAdelantada">Próxima actuación
-                                    requerida</label>
+                                <label class="label-left" for="descripcionActuacionAdelantada" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('descripcionActuacionAdelantada').invalid && addressForm.get('descripcionActuacionAdelantada').touched) ||
+                                      (addressForm.get('descripcionActuacionAdelantada').invalid && estaEditando)
+                                  }">Próxima actuación requerida</label>
                             </div>
                         </div>
                     </div>
@@ -74,6 +90,15 @@
                                     *ngIf="!addressForm.controls.descripcionActuacionAdelantada.value">
                                     500
                                 </span>
+                                <span class="icon-incompleto">
+                                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip" *ngIf="
+                                        (addressForm.get('descripcionActuacionAdelantada').invalid && addressForm.get('descripcionActuacionAdelantada').touched) ||
+                                        (addressForm.get('descripcionActuacionAdelantada').invalid && estaEditando)
+                                      " />
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -82,7 +107,11 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="estadoActuacionDerivada">Estado de la actuación
+                                <label class="label-left" for="estadoActuacionDerivada" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('estadoActuacionDerivada').invalid && addressForm.get('estadoActuacionDerivada').touched) ||
+                                      (addressForm.get('estadoActuacionDerivada').invalid && estaEditando)
+                                  }">Estado de la actuación
                                     derivada</label>
                             </div>
                             <div class="col">
@@ -95,6 +124,15 @@
                                     </mat-select>
                                 </mat-form-field>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('estadoActuacionDerivada').invalid && addressForm.get('estadoActuacionDerivada').touched) ||
+                                    (addressForm.get('estadoActuacionDerivada').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -102,7 +140,11 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="observaciones">Observaciones</label>
+                                <label class="label-left" for="observaciones" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                      (addressForm.get('observaciones').invalid && estaEditando)
+                                  }">Observaciones</label>
                             </div>
                         </div>
                     </div>
@@ -126,6 +168,15 @@
                                 <span class="contador miles" *ngIf="!addressForm.controls.observaciones.value">
                                     1000
                                 </span>
+                                <span class="icon-incompleto">
+                                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip" *ngIf="
+                                        (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                        (addressForm.get('observaciones').invalid && estaEditando)
+                                      " />
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -143,7 +194,11 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="urlSoporte">URL con soporte</label>
+                                <label class="label-left" for="urlSoporte" [ngClass]="{
+                                    'color-secondaryColor':
+                                      (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
+                                      (addressForm.get('urlSoporte').invalid && estaEditando)
+                                  }">URL con soporte</label>
                             </div>
                             <div class="col">
                                 <mat-form-field class="full-width">
@@ -152,6 +207,15 @@
                                 <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte
                                     del registro de la actuación de trámite.</span>
                             </div>
+                            <span class="icon-incompleto">
+                                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                                    alt="este campo es requerido" [matTooltipPosition]="'above'"
+                                    matTooltip="Debe ingresar la información en el campo para continuar"
+                                    matTooltipClass="info-tooltip" *ngIf="
+                                    (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
+                                    (addressForm.get('urlSoporte').invalid && estaEditando)
+                                  " />
+                            </span>
                         </div>
                     </div>
                 </div>
