--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -48,3 +48,19 @@
     </button>
   </div>
 </form>
+
+<!--Observaciones del supervisor-->
+<mat-card class="shipping-card var-main-gris" *ngIf="data.informe.tieneObservacionSupervisor && (data.informe.estadoInforme === '4' || data.informe.estadoInforme === '8')" [formGroup]="observacionesForm">
+  <mat-card-header class="header-card header-card--margin">
+    <mat-card-title class="mat-card-title header-card--text">
+      Observación del supervisor
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <strong> {{ observacionesForm.get('fechaCreacion').value | date: 'dd/MM/yyyy' }}</strong>
+    <p [innerHTML]="observacionesForm.get('observaciones').value">
+    </p>
+  </mat-card-content>
+</mat-card>
+
+<app-tabla-observaciones *ngIf="existe_historial && (data.informe.estadoInforme === '4' || data.informe.estadoInforme === '8')" [data]="anexos"></app-tabla-observaciones>
