--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -92,7 +92,10 @@
               <ng-container matColumnDef="validacionCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Verificación</th>
                 <td mat-cell *matCellDef="let element">
-                  <section class="slect-table-contain mt-1em" *ngIf="(element.estadoValidacion !== '6' && element.estadoValidacion !== '9') || (element.aprobacionCodigo === '2' && (element.estadoValidacion === '6' || element.estadoValidacion === '9') && element.tieneObservacionSupervisor)">
+                  <section class="slect-table-contain mt-1em" *ngIf="(element.estadoValidacion !== '6' && element.estadoValidacion !== '9' && element.informeFinal.estadoAprobacion !== '6') 
+                                                                || (element.aprobacionCodigo === '2' && (element.estadoValidacion === '6' || element.estadoValidacion === '9') && element.tieneObservacionSupervisor)
+                                                                || (element.estadoValidacion !== '6' && element.estadoValidacion !== '9' && element.informeFinal.estadoAprobacion === '6' && element.aprobacionCodigo === '2') 
+                                                                ">
                     <mat-form-field class="select-width">
                       <mat-label>
                       <span *ngIf="element.estadoValidacion !== '6' && element.validacionCodigo != null">{{ element.validacionCodigoString }}</span>
@@ -115,7 +118,12 @@
                       />
                     </span>
                   </section>
-                  <span *ngIf="(element.estadoValidacion === '6' || element.estadoValidacion === '9') && !(element.aprobacionCodigo === '2' && element.tieneObservacionSupervisor)">{{ element.validacionCodigoString }}</span>
+                  <span *ngIf="((element.estadoValidacion === '6' || element.estadoValidacion === '9') && !(element.aprobacionCodigo === '2' && element.tieneObservacionSupervisor))
+                                || (element.estadoValidacion !== '6' && element.estadoValidacion !== '9' && element.informeFinal.estadoAprobacion === '6' && !(element.aprobacionCodigo === '2' && element.tieneObservacionSupervisor)) 
+
+                            ">
+                      {{ element.validacionCodigoString }}
+                  </span>
                 </td>
               </ng-container>
 
@@ -123,22 +131,6 @@
               <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestionar</th>
                 <td mat-cell *matCellDef="let element">
-                  <!--<button
-                    *ngIf="element.verificacion === 'Cumple' || element.verificacion === 1"
-                    mat-button
-                    color="warn"
-                    mat-raised-button
-                    color="accent"
-                    class="btn-table animatedOpacity"
-                    type="button"
-                  >
-                    <span *ngIf="element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0">
-                      Tipo de documento
-                    </span>
-                    <span *ngIf="element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0">
-                      Ver detalle/ Editar
-                    </span>
-                  </button>-->
                   <button
                     *ngIf="element.estadoValidacion !== '6' && element.estadoValidacion !== '9' && element.validacionCodigo == '2'"
                     mat-button
@@ -154,12 +146,8 @@
                     <span>
                       Observaciones
                     </span>
-                    <!--<span
-                      *ngIf="element.tieneObservacionNoCumple != null && element.tieneObservacionNoCumple == true"
-                    >
-                      Ver Observaciones
-                    </span>-->
                   </button>
+                  <!--Observaciones 2d vuelta-->
                   <button
                   *ngIf="(element.estadoValidacion === '6' || element.estadoValidacion === '9') && element.validacionCodigo == '2'"
                   mat-button
@@ -167,8 +155,11 @@
                   mat-raised-button
                   color="accent"
                   class="btn-table animatedOpacity info-button min-w-11em"
-                  [class.completo]="element.tieneObservacionNoCumple || element.tieneObservacionSupervisor"
-                  [class.sin-diligenciar]="!element.tieneObservacionNoCumple"
+                  [class.completo]="element.tieneObservacionSupervisor 
+                                    && (element.archivado == null || !element.archivado) 
+                                    && element.tieneObservacionNoCumple
+                                  "
+                  [class.sin-diligenciar]="(element.tieneObservacionSupervisor && element.archivado && element.tieneObservacionNoCumple) || !element.tieneObservacionNoCumple"
                   type="button"
                   (click)="openDialogObservaciones(element,true)"
                 >
