--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -90,7 +90,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-tabla-avance-fisico [seguimientoSemanal]="seguimientoSemanal" [esVerDetalle]="true"></app-tabla-avance-fisico>
+            <app-tabla-avance-fisico [seguimientoSemanal]="seguimientoSemanal" [avanceFisicoObs]="avanceFisicoObs" [esVerDetalle]="esVerDetalle"></app-tabla-avance-fisico>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
