--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
@@ -5,26 +5,58 @@
         <div align="left">
             <mat-card>
                 <mat-card-content>
-                    <div class="row" style="margin-left: .7em;">
-                        <div class="col-md-12">
-                          <div class="row">
-                            <div class="pr-1">
-                              <label class="label-left" style="margin-top: 1.5em;">¿Se ejecutó alguna actividad relacionada con la gestión ambiental durante la semana?</label>
-                            </div>
-                            <div class="col d-flex">
-                                <section style="width: 100%;">
-                                    <mat-form-field class="w-50" appearance="fill">
-                                      <mat-select class="padding-left" formControlName="seEjecutoGestionAmbiental" required>
-                                        <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
-                                            {{requisito.viewValue}}
-                                        </mat-option>
-                                      </mat-select>
-                                    </mat-form-field>
-                                  </section>
-                            </div>
+                  <div class="row" style="margin-left: .7em;">
+                      <div class="col-md-12">
+                        <div class="row">
+                          <div class="pr-1">
+                            <label class="label-left" style="margin-top: 1.5em;">¿Se ejecutó alguna actividad relacionada con la gestión ambiental durante la semana?</label>
+                          </div>
+                          <div class="col d-flex">
+                              <section style="width: 100%;">
+                                  <mat-form-field class="w-50" appearance="fill">
+                                    <mat-select class="padding-left" formControlName="seEjecutoGestionAmbiental" required>
+                                      <mat-option *ngFor="let requisito of booleanosActividadRelacionada" [value]="requisito.value">
+                                          {{requisito.viewValue}}
+                                      </mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
+                                </section>
                           </div>
                         </div>
-                    </div>
+                      </div>
+                  </div>
+
+                  <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="historialGestionAmbiental.length > 0 && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === false">
+                    <table mat-table [dataSource]="tablaHistorialgestionAmbiental" matSort>
+                  
+                        <ng-container matColumnDef="fechaRevision">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                          <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                        </ng-container>
+                  
+                        <ng-container matColumnDef="responsable">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                            <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
+                                    <p>Supervisor</p>
+                                </ng-container>
+                                <ng-template #noEsSupervisor>
+                                    <p>Apoyo a la supervisión</p>
+                                </ng-template> 
+                            </td>
+                        </ng-container>
+                  
+                        <ng-container matColumnDef="historial">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                          <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                              <section [innerHTML]="element.observacion"></section>
+                          </td>
+                        </ng-container>
+                    
+                      <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+                      <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+                    </table>
+                  </section>
 
                   <div class="row" *ngIf="formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true">
                     <div class="col-md-6">
@@ -47,7 +79,7 @@
                         </div>
                       </div>
                     </div>
-                </div>
+                  </div>
 
                 </mat-card-content>
             </mat-card>
@@ -100,6 +132,39 @@
                                                                 && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoMaterialInsumo"
                                                         class="mt-1em">
                             </app-manejo-material-insumo>
+
+
+                            <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="actividad.get( 'tipoActividad' ).value !== null && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoMaterialInsumo && historialManejoMateriales.length > 0">
+                              <table mat-table [dataSource]="tablaHistorialManejoMateriales" matSort>
+                            
+                                  <ng-container matColumnDef="fechaRevision">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                                    <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="responsable">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                          <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
+                                              <p>Supervisor</p>
+                                          </ng-container>
+                                          <ng-template #noEsSupervisor>
+                                              <p>Apoyo a la supervisión</p>
+                                          </ng-template> 
+                                      </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="historial">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                                    <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                        <section [innerHTML]="element.observacion"></section>
+                                    </td>
+                                  </ng-container>
+                              
+                                <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+                              </table>
+                            </section>
         
                             <!-- Manejo de residuos de construcción y demolición -->
                             <app-manejo-residuos-construccion [formManejoResiduosConstruccion]="actividad.get( 'manejoResiduosConstruccion' )"
@@ -109,6 +174,38 @@
                                                                       && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoResiduosConstruccion"
                                                               class="mt-1em">
                             </app-manejo-residuos-construccion>
+
+                            <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="historialResiduosConstruccion.length > 0 && actividad.get( 'tipoActividad' ).value !== null && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoResiduosConstruccion">
+                              <table mat-table [dataSource]="tablaHistorialResiduosConstruccion" matSort>
+                            
+                                  <ng-container matColumnDef="fechaRevision">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                                    <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="responsable">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                          <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
+                                              <p>Supervisor</p>
+                                          </ng-container>
+                                          <ng-template #noEsSupervisor>
+                                              <p>Apoyo a la supervisión</p>
+                                          </ng-template> 
+                                      </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="historial">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                                    <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                        <section [innerHTML]="element.observacion"></section>
+                                    </td>
+                                  </ng-container>
+                              
+                                <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+                              </table>
+                            </section>
         
                             <!-- Manejo de residuos peligrosos y especiales -->
                             <app-manejo-residuos-peligrosos [formManejoResiduosPeligrosos]="actividad.get( 'manejoResiduosPeligrosos' )"
@@ -118,6 +215,38 @@
                                                                     && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoResiduosPeligrosos"
                                                             class="mt-1em">
                             </app-manejo-residuos-peligrosos>
+
+                            <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="historialResiduosPeligrosos.length > 0 && actividad.get( 'tipoActividad' ).value !== null && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.manejoResiduosPeligrosos">
+                              <table mat-table [dataSource]="tablaHistorialResiduosPeligrosos" matSort>
+                            
+                                  <ng-container matColumnDef="fechaRevision">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                                    <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="responsable">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                          <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
+                                              <p>Supervisor</p>
+                                          </ng-container>
+                                          <ng-template #noEsSupervisor>
+                                              <p>Apoyo a la supervisión</p>
+                                          </ng-template> 
+                                      </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="historial">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                          <section [innerHTML]="element.observacion"></section>
+                                      </td>
+                                  </ng-container>
+                              
+                                <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+                              </table>
+                            </section>
         
                             <!-- Otros manejos -->
                             <app-otros-manejos  [formOtrosManejos]="actividad.get( 'otra' )"
@@ -127,6 +256,38 @@
                                                         && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.otra"
                                                 class="mt-1em">
                             </app-otros-manejos>
+
+                            <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="historialManejoOtros.length > 0 && actividad.get( 'tipoActividad' ).value !== null && formGestionAmbiental.get( 'seEjecutoGestionAmbiental' ).value === true && actividad.get( 'tipoActividad' ).value.codigo === tipoActividadesCodigo.otra">
+                              <table mat-table [dataSource]="tablaHistorialManejoOtros" matSort>
+                            
+                                  <ng-container matColumnDef="fechaRevision">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
+                                    <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="responsable">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                          <ng-container *ngIf="element.esSupervisor === true; else noEsSupervisor">
+                                              <p>Supervisor</p>
+                                          </ng-container>
+                                          <ng-template #noEsSupervisor>
+                                              <p>Apoyo a la supervisión</p>
+                                          </ng-template> 
+                                      </td>
+                                  </ng-container>
+                            
+                                  <ng-container matColumnDef="historial">
+                                      <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
+                                      <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                                          <section [innerHTML]="element.observacion"></section>
+                                      </td>
+                                  </ng-container>
+                              
+                                <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
+                              </table>
+                            </section>
                         </mat-card-content>
                     </mat-card>
                     <div class="text-center" style="margin-top: 2em;">
